Fix PR comments and suggestions Label should be all caps and light gray option labels should be a dark gray color Circles are getting cut off when selected

--- a/styleguide/source/assets/scss/01-atoms/_radio-button.scss
+++ b/styleguide/source/assets/scss/01-atoms/_radio-button.scss
@@ -1,12 +1,19 @@
 .ui-checkboxradio-label {
   @include gutter($margin-top-half...);
   @include gutter($margin-bottom-full...);
+  color: $gray-64;
   display: block;
   padding: 0;
   text-align: left;
+
+  &:hover {
+    color: $gray-64;
+  }
 }
 
 .ui-checkboxradio-label .ui-icon-background {
+  position: relative;
+  left: 2px;
   border: 1px solid $gray-7;
   width: 16px;
   height: 16px;
