--- a/styleguide/source/assets/scss/01-atoms/_textfield.scss
+++ b/styleguide/source/assets/scss/01-atoms/_textfield.scss
@@ -40,7 +40,9 @@ textarea {
   }
 }
 
-label {
+label,
+legend,
+.ama__label {
   @include font-size($small-font-sizes);
   font-weight: 700;
   text-transform: uppercase;
